# python-xml

./: .qmlls.ini  AGENTS.md  pyproject.toml
.agents/skills/documentation-maintenance/: SKILL.md
.agents/skills/pyside-qml/: SKILL.md
.agents/skills/python-guidelines/: SKILL.md
docs/agents/: project-structure.md
scripts/: build.py  run.py  utils.py
src/power_narrator/: __init__.py  __main__.py
src/power_narrator/cli/: __init__.py  __main__.py
src/power_narrator/pptx/: __main__.py  content_types.py  notes.py  paths.py  slide.py  xml_helper.py  xpath.py
src/power_narrator/pptx/audio/: audio_delete.py  audio_insert.py  audio_model.py  audio_timing.py  audio_upsert.py
src/power_narrator/ui/: __init__.py  __main__.py  audio_identity.py  resources.qrc
src/slide_voice_app/: audio_identity.py
src/slide_voice_app/pptx/: audio.py  audio_embed.py  audio_model.py  audio_read.py  audio_timing.py  audio_write.py  exceptions.py  notes.py  pptx_file.py  slide.py  xpath.py
src/slide_voice_app/ui/: Main.qml  SettingsWindow.qml
src/slide_voice_pptx/: __init__.py  __main__.py  docprops.py  exceptions.py  namespaces.py  notes.py  paths.py  pptx_file.py  rels.py  slide.py  xml_helper.py  xpath.py
src/slide_voice_pptx/audio/: audio_delete.py  audio_embed.py  audio_insert.py  audio_read.py  audio_timing.py  audio_write.py
tests/power_narrator/cli/: test___main__.py
tests/power_narrator/pptx/: test_paths.py  test_pptx_file.py
tests/slide_voice_app/tts/: test_ssml.py
tests/slide_voice_pptx/: test_cli.py  test_paths.py  test_pptx_file.py
(+51 files in other folders)
