[project]
name = "power-narrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "google-cloud-texttospeech>=2.34.0",
    "pyside6>=6.10.1",
]

[build-system]
requires = ["uv_build>=0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "nuitka[onefile]>=4.0",
    "patchelf>=0.17.2.4 ; sys_platform == 'linux'",
    "pytest>=9.0.2",
    "ruff>=0.15.11",
    "ty>=0.0.31",
]
